--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,5 +18,16 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    background-color: #f8f9fa;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.card-header {
+    font-weight: bold;
+    text-align: center;
 }
