add profile details

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@
                                 <li class="nav-item">
                                     <a class="nav-link" asp-action="ManageTransactions" asp-controller="Admin">Borrowing Transactions</a>
                                 </li>
+                                <li>
+                                    <a class="nav-link" asp-action="EditProfile" asp-controller="Admin">Edit Profile</a>
+                                </li>
+                                <li>
+                                    <a class="nav-link" asp-action="ProfileDetails" asp-controller="Admin">Profile Details</a>
+                                </li>
                             }
 
                             <!-- User-Specific Links -->
