make it more organized

--- a/Views/Book/BookDetails.cshtml
+++ b/Views/Book/BookDetails.cshtml
@@ -40,7 +40,7 @@
                     <td>@Model.TotalCopies</td>
                 </tr>
             </table>
-            <a href="@Url.Action("ManageBooks", "Admin")" class="btn btn-primary">Back to List</a>
+            <a href="@Url.Action("ManageBooks", "Book")" class="btn btn-primary">Back to List</a>
         </div>
     </div>
 </div>
