--- a/Views/Book/ManageBooks.cshtml
+++ b/Views/Book/ManageBooks.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Book>
 
 <h2>Manage Books</h2>
-<a href="@Url.Action("AddBook", "Admin")" class="btn btn-primary mb-3">Add New Book</a>
+<a href="@Url.Action("AddBook", "Book")" class="btn btn-primary mb-3">Add New Book</a>
 
 <table class="table table-striped">
     <thead>
@@ -38,9 +38,9 @@
                 <td>@book.AvailableCopies</td>
                 <td>@book.TotalCopies</td>
                 <td>
-                    <a href="@Url.Action("BookDetails", "Admin", new { id = book.Id })" class="btn btn-info btn-sm">View Details</a>
-                    <a href="@Url.Action("EditBook", "Admin", new { id = book.Id })" class="btn btn-warning btn-sm">Edit</a>
-                    <a href="@Url.Action("DeleteBook", "Admin", new { id = book.Id })" class="btn btn-danger btn-sm">Delete</a>
+                    <a href="@Url.Action("BookDetails", "Book", new { id = book.Id })" class="btn btn-info btn-sm">View Details</a>
+                    <a href="@Url.Action("EditBook", "Book", new { id = book.Id })" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="@Url.Action("DeleteBook", "Book", new { id = book.Id })" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
         }
