--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
                                     <a class="nav-link" asp-action="Index" asp-controller="Home">Dashboard</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-action="ManageBooks" asp-controller="Admin">Manage Books</a>
+                                    <a class="nav-link" asp-action="ManageBooks" asp-controller="Book">Manage Books</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-action="ManageTransactions" asp-controller="Admin">Borrowing Transactions</a>
+                                    <a class="nav-link" asp-action="ManageTransactions" asp-controller="Book">Borrowing Transactions</a>
                                 </li>
                                 <li>
                                     <a class="nav-link" asp-action="EditProfile" asp-controller="Admin">Edit Profile</a>
