--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -80,9 +80,9 @@
     <main class="container my-4">
         @RenderBody()
     </main>
-    <footer class="bg-dark text-white py-3">
+    <footer class="bg-dark text-white py-3 mt-5">
         <div class="container text-center">
-            &copy; @DateTime.Now.Year MyAuthApp. All Rights Reserved.
+            &copy; @DateTime.Now.Year Librery System. All Rights Reserved.
         </div>
     </footer>
 
