--- a/Views/User/ProfileDetails.cshtml
+++ b/Views/User/ProfileDetails.cshtml
@@ -18,6 +18,10 @@
                     <th class="text-secondary">Email</th>
                     <td>@Model.Email</td>
                 </tr>
+                <tr>
+                    <th class="text-secondary">Role</th>
+                    <td>@Model.Role</td>
+                </tr>
             </table>
         </div>
         <div class="card-footer text-right">
