--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Libereay_System.styles.css" asp-append-version="true" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary animate-navbar">
             <div class="container">
                 <a class="navbar-brand" href="/">Liberary System</a>
                 <button class="navbar-toggler" type="button" asp-action="Index" asp-controller="Home" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -80,7 +81,7 @@
     <main class="container my-4">
         @RenderBody()
     </main>
-    <footer class="bg-dark text-white py-3 mt-5">
+    <footer class="bg-dark text-white py-3 mt-5 fade-in">
         <div class="container text-center">
             &copy; @DateTime.Now.Year Librery System. All Rights Reserved.
         </div>
@@ -89,6 +90,12 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script>
+        // GSAP animation for the navbar
+        gsap.from(".animate-navbar", { duration: 1, y: -50, opacity: 0, ease: "bounce" });
+
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
